<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_nic"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/et_nic"
        android:inputType="text"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/tv_bookingDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_booking" />

    <TextView
        android:id="@+id/txt_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/summary"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_nic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bookingDate"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/et_bookingDate"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tv_reserveDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nic" />

    <TextView
        android:id="@+id/tv_reserveDate"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/et_reserveDate"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/tv_tickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bookingDate" />

    <TextView
        android:id="@+id/tv_tickets"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/et_tickets"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/tv_route"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reserveDate" />

    <TextView
        android:id="@+id/tv_route"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tickets" />

    <TextView
        android:id="@+id/tv_train"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_route" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_train" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/btn_confirm"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_cancel"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:theme="@android:style/Theme.NoTitleBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/tv_destination"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/et_time"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_destination" />

</androidx.constraintlayout.widget.ConstraintLayout>